--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trade_card",
+  "name": "crash",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.16",
-    "next": "13.5.6",
-    "postcss": "8.4.31",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
+    "next": "13.4.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.6",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
