--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-config-next": "13.4.1",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
-    "next": "13.4.1",
+    "next": "^13.5.6",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
